Detection With ID Warnings Added

--- a/templates/index.html
+++ b/templates/index.html
@@ -14,7 +14,7 @@
  {% endif %}
 <form action="http://localhost:5000/login" method="POST">
 	
-	<img src="{{ url_for('static', filename = 'loginavatar.jpg') }}" style="margin-left: 15px;">
+	<img src="{{ url_for('static', filename = 'logo.jpg') }}" style="margin-left: 15px;">
 
 	<div class="inputGroup inputGroup1">
 		<label for="email1">Student ID</label>
