--- a/templates/logs.html
+++ b/templates/logs.html
@@ -11,7 +11,7 @@
 <body>
 {% block content %}
 <div class="container" style="margin-top:20px;">
-  
+  <a href="{{url_for('studentlogs')}}"><button class="btn btn-success">Exam Stats</button></a>&nbsp;&nbsp;&nbsp;<a href="{{url_for('index')}}"><button class="btn btn-danger">Logout</button></a><br><br>
   <input class="form-control" id="myInput" type="text" placeholder="Search..">
   <br>
   <table class="table table-bordered table-striped">
